Cropper style issue has fixed

--- a/src/app/styles/components/modals/_cropper.modal.scss
+++ b/src/app/styles/components/modals/_cropper.modal.scss
@@ -1,4 +1,7 @@
 .cropper-modal-window {
+    .modal-body {
+        max-height: calc(60vh);
+    }
     .modal-footer {
         .btn-group.row {
             margin: 0;
